--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div="container">
         <h1>Simple Interest Calculator</h1>
         
         Amount <input type="number"  id="principal">  <br/>
@@ -13,6 +14,6 @@
 
         <button onclick="compute()">Compute Interest</button> <br>
         &#169;Everyone Can Get Rich
-  
+        </div>
     </body>
 </html>
