--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
         <h1>Simple Interest Calculator</h1>
 <center>
         Amount <input type="number"  id="principal">  <br/>
+    <br>
         Rate <input type="number"  id="rate">  <br/>
+    <br>
         No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
+    <br>
+        Interest : <span id="result"></span>
+    <br>
         <button onclick="compute()">Compute Interest</button> <br>
         &#169;Everyone Can Get Rich
         </center>
