--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
     <body>
         <h1>Simple Interest Calculator</h1>
 <center>
-        Amount <input type="number"  id="principal">  <br/>
-    <br>
-        Rate <input type="number"  id="rate">  <br/>
-    <br>
-        No. of Years <input type="number"  id="years">  <br/>
-    <br>
+        Amount <input type="number"  id="principal">  <br>
+        Rate <input type="number"  id="rate">  <br>
+        No. of Years <input type="number"  id="years">  <br>
         Interest : <span id="result"></span>
-    <br>
         <button onclick="compute()">Compute Interest</button> <br>
         &#169;Everyone Can Get Rich
         </center>
