--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         Amount <input type="number"  id="principal">  <br>
         Rate <input type="number"  id="rate">  <br>
         No. of Years <input type="number"  id="years">  <br>
-        Interest : <span id="result"></span>
+        Interest : <span id="result"></span> <br>
         <button onclick="compute()">Compute Interest</button> <br>
         &#169;Everyone Can Get Rich
         </center>
